// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown 1`] = `
.c0 {
  display: inline-block;
}

.c0:focus {
  outline: none;
}

.c1 {
  font-family: inherit;
  display: inline-block;
  text-align: center;
  cursor: pointer;
  text-transform: capitalize;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  pointer-events: auto;
  opacity: 1;
  color: white;
  height: 36px;
  padding: 0 18px;
  font-size: 12px;
  width: auto;
  background: #2DAAF2;
  border: 1px solid #2DAAF2;
  -webkit-transition: 175ms;
  transition: 175ms;
}

.c1:hover {
  background: #45b4f3;
  border-color: #45b4f3;
}

.c1:active {
  background: #51b9f4;
  border-color: #51b9f4;
}

<div
  onBlur={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "outline": "none",
    }
  }
  tabIndex={0}
>
  <div
    aria-expanded={false}
    aria-haspopup="true"
    className="re-dropdown-trigger c0"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <button
      className="re-button re-button-primary c1"
      disabled={false}
      size="md"
    >
      Trigger
    </button>
  </div>
</div>
`;

exports[`closes on blur event 1`] = `
<div
  onBlur={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "outline": "none",
    }
  }
  tabIndex={0}
>
  <styled.div
    aria-expanded={false}
    aria-haspopup="true"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <Button
      block={false}
      disabled={false}
      loading={false}
      outline={false}
      size="md"
      transparent={false}
      variant="primary"
    >
      Trigger
    </Button>
  </styled.div>
  <Portal />
</div>
`;

exports[`closes on mouseleave event 1`] = `
<div
  onBlur={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "outline": "none",
    }
  }
  tabIndex={0}
>
  <styled.div
    aria-expanded={false}
    aria-haspopup="true"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <Button
      block={false}
      disabled={false}
      loading={false}
      outline={false}
      size="md"
      transparent={false}
      variant="primary"
    >
      Trigger
    </Button>
  </styled.div>
  <Portal />
</div>
`;

exports[`it opens on toggle event: click 1`] = `
<div
  onBlur={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "outline": "none",
    }
  }
  tabIndex={0}
>
  <styled.div
    aria-expanded={true}
    aria-haspopup="true"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <Button
      block={false}
      disabled={false}
      loading={false}
      outline={false}
      size="md"
      transparent={false}
      variant="primary"
    >
      Trigger
    </Button>
  </styled.div>
  <Portal>
    <styled.div
      onFocus={[Function]}
      onMouseEnter={[Function]}
      tabIndex={0}
      width={150}
    >
      <Component>
        Test
      </Component>
      <Styled(styled.div)>
        Body
      </Styled(styled.div)>
      <Styled(styled.div)>
        Footer
      </Styled(styled.div)>
    </styled.div>
  </Portal>
</div>
`;

exports[`it opens on toggle event: mouseenter 1`] = `
<div
  onBlur={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "outline": "none",
    }
  }
  tabIndex={0}
>
  <styled.div
    aria-expanded={true}
    aria-haspopup="true"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <Button
      block={false}
      disabled={false}
      loading={false}
      outline={false}
      size="md"
      transparent={false}
      variant="primary"
    >
      Trigger
    </Button>
  </styled.div>
  <Portal>
    <styled.div
      onFocus={[Function]}
      onMouseEnter={[Function]}
      tabIndex={0}
      width={150}
    >
      <Component>
        Test
      </Component>
      <Styled(styled.div)>
        Body
      </Styled(styled.div)>
      <Styled(styled.div)>
        Footer
      </Styled(styled.div)>
    </styled.div>
  </Portal>
</div>
`;

exports[`remains open on blur + menu focus 1`] = `
<div
  onBlur={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "outline": "none",
    }
  }
  tabIndex={0}
>
  <styled.div
    aria-expanded={true}
    aria-haspopup="true"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <Button
      block={false}
      disabled={false}
      loading={false}
      outline={false}
      size="md"
      transparent={false}
      variant="primary"
    >
      Trigger
    </Button>
  </styled.div>
  <Portal>
    <styled.div
      onFocus={[Function]}
      onMouseEnter={[Function]}
      tabIndex={0}
      width={150}
    >
      <Component>
        Test
      </Component>
      <Styled(styled.div)>
        Body
      </Styled(styled.div)>
      <Styled(styled.div)>
        Footer
      </Styled(styled.div)>
    </styled.div>
  </Portal>
</div>
`;

exports[`remains open on mouseleave + menu mouseenter 1`] = `
<div
  onBlur={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "outline": "none",
    }
  }
  tabIndex={0}
>
  <styled.div
    aria-expanded={true}
    aria-haspopup="true"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <Button
      block={false}
      disabled={false}
      loading={false}
      outline={false}
      size="md"
      transparent={false}
      variant="primary"
    >
      Trigger
    </Button>
  </styled.div>
  <Portal>
    <styled.div
      onFocus={[Function]}
      onMouseEnter={[Function]}
      tabIndex={0}
      width={150}
    >
      <Component>
        Test
      </Component>
      <Styled(styled.div)>
        Body
      </Styled(styled.div)>
      <Styled(styled.div)>
        Footer
      </Styled(styled.div)>
    </styled.div>
  </Portal>
</div>
`;
